# gomoku_cmake

./: CMakeLists.txt  README.md
gomoku/: CMakeLists.txt
gomoku/board/: CMakeLists.txt  board.cpp  board.hpp
gomoku/history/: CMakeLists.txt  action.hpp  history.cpp  history.hpp
gomoku/manager/: CMakeLists.txt  manager.cpp  manager.hpp
launcher/: CMakeLists.txt  main.cpp
